# Palm

./: .gitignore  .pre-commit-config.yaml  01_pal.org  02_prolog_arithmetic.html  02_prolog_arithmetic.org  README.md  pyproject.toml
foundations/: encoder_models.org  transformers_and_llms.org
src/: transformer.py
tests/: test_transformer.py
