[tool.poetry]
name = "palm"
version = "0.1.0"
description = ""
authors = ["N. Arun Varma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
hypothesis = {version = "^6.108.4", extras = ["numpy"]}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
